crates/schema/tests/compile_fail/builder_closure_number_no_widget_multiline.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/builder_closure_number_no_widget_multiline.rs:6:35
  |
6 |         .number("n", |n| n.widget(StringWidget::Multiline))
  |                            ------ ^^^^^^^^^^^^^^^^^^^^^^^ expected `NumberWidget`, found `StringWidget`
  |                            |
  |                            arguments to this method are incorrect
  |
note: method defined here
 --> src/field.rs
  |
  |     pub fn widget(mut self, widget: NumberWidget) -> Self {
  |            ^^^^^^
